--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <title>Togo || Home</title>
+<link rel="shortcut icon" type="image/png" href="http://www.example.com/favicon.png" />
 <h1>hi main page</h1>
 <hr/><hr/>
