--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <title>Togo || Home</title>
-<link rel="shortcut icon" type="image/png" href="https://github.com/ScottyBoy4/home/blob/master/favicon.png" />
-<h1 style="text-align:center;">hi main page</h1>
-<hr/><hr/>
+
+<!DOCTYPE html>
+
+
+  <head>
+    <title>Togo || Home</title>
+  <head>
+  
+  <body style="background-color: light-blue">
+    <h1 style="text-align:center;"><b>Hi Main Page<b></h1>
+    <hr/><hr/>
+  <body>
+
+    
