--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Togo || Home</title>
   <head>
   
-  <body style="background-color: light-blue">
+  <body style="background-color:LightPink">
     <h1 style="text-align:center;"><b>Hi Main Page<b></h1>
     <hr/><hr/>
   <body>
