--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   
   <body style="background-color:LightPink">
     <h1 style="text-align:center;"><b>Hi Main Page<b></h1>
-    <hr/><hr/>
+    <hr/>
+      <hr>
+      {
+    height: 0px;
+    border: none;
+    border-top: 1px solid black;
+}
   <body>
 
     
