--- a/index.html
+++ b/index.html
@@ -8,13 +8,9 @@
   <head>
   
   <body style="background-color:LightPink">
-          hr{
-    height: 0px;
-    border: none;
-    border-top: 1px solid black;
-}    
+
     <h1 style="text-align:center;"><b>Hi Main Page<b></h1>
-    <hr/>
+    <hr style="height:5;"/>
   
 
       
