--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body style="background-color:LightPink">
 
     <h1 style="text-align:center;"><b>Hi Main Page<b></h1>
-    <hr style="height:5;"/>
+    <hr style="height:5; color:Black;"/>
   
 
       
