--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <body style="background-color:LightPink">
 
     <h1 style="text-align:center;"><b>Hi Main Page<b></h1>
-    <hr style="height:10; border-color:Black; background-color:Black;">
-      <p1 style="color:White;">hi</p1>
-      </hr>  
+    <hr style="height:10; border-color:Black; background-color:Black;"/>
+      
   
 
       
