--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   
   <body style="background-color:LightPink">
 
-    <h1 style="text-align:center;"><b>Hi Main Page<b></h1>
+    <h1 style="text-align:center;"><b>Togo<b></h1>
+      <h5><i>The Site For All Your Assire Needs</i></h5>
     <hr style="height:10; border-color:Black; background-color:Black;"/>
       
   
