--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body style="background-color:LightPink">
 
     <h1 style="text-align:center;"><b>Togo<b></h1>
-      <h5><i>The Site For All Your Assire Needs</i></h5>
+      <h5 style="text-align:center;"><i>The Site For All Your Assire Needs</i></h5>
     <hr style="height:10; border-color:Black; background-color:Black;"/>
       
   
