--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1 style="text-align:center;"><b>Togo<b></h1>
       <h5 style="text-align:center;"><i>The Site For All Your Assire Needs</i></h5>
     <hr style="height:10; border-color:Black; background-color:Black;"/>
+      <a href="https://scottyboy4.github.io/scott/" target="_blank"><H3>Scott</h3></a>
       
   
 
