--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <head>
     <title>Togo || Home</title>
-    <link rel='icon' href='/favicon.ico' type='image/x-icon'/ >
+    <link rel='icon' href='favicon.ico' type='image/x-icon'/ >
   <head>
   
   <body style="background-color:LightPink">
