--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
       <h5 style="text-align:center;"><i>The Site For All Your Assire Needs</i></h5>
     <hr style="height:10; border-color:Black; background-color:Black;"/>
       <a href="https://scottyboy4.github.io/scott/" ><H3>Scott</h3></a>
+      <button onclick="gotologin()">Login</button>
       
-  
+<script type="text/javascript">
+        function gotologin() 
+  {
+          window.open('login.html')
+        }
 
       
   <body>
