--- a/login.html
+++ b/login.html
@@ -14,7 +14,8 @@ function check(form)/*function to check userid & password*/
  /*the following code checkes whether the entered userid and password are matching*/
  if(form.userid.value == "scottyboy4" && form.pswrd.value == "scott")
   {
-    window.open('loggedin.html')/*opens the target page while Id & password matches*/
+    window.open('JoCS4FhgApstfGnsYJLC VbpIuZV80FxTBWwcrEGM.html
+')/*opens the target page while Id & password matches*/
   }
  else
  {
