--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <script type="text/javascript">
         function gotologin() 
   {
-    <!--ID=B7267351-473F-409D-9765-754A8EBCDE05;Version=1|{"VoiceNameToIdMapItems":[{"Id":"45eb6cbb-ec3b-43a5-951b-5a8b8bf0a04e","Name":"Microsoft Server Speech Text to Speech Voice (de-DE, Stefan, Apollo)","VoiceType":"StandardVoice"}]}-->
-<speak xmlns="http://www.w3.org/2001/10/synthesis" xmlns:mstts="http://www.w3.org/2001/mstts" xmlns:emo="http://www.w3.org/2009/10/emotionml" version="1.0" xml:lang="de-DE"><voice name="Microsoft Server Speech Text to Speech Voice (de-DE, Stefan, Apollo)"> Aleksey Vaynshteyn.</voice></speak>
+    var audio = new Audio('Audio.wav');
+audio.play();
           window.open('login.html')
         }
       </script>
