--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script type="text/javascript">
         function gotologin() 
   {
-    var audio = new Audio('Audio.wav');
+    var audio = new Audio('/Audio.wav');
 audio.play();
           window.open('login.html')
         }
